aml-syntax/src/snapshots/aml_syntax__expressions__test__add.snap
---
source: aml-syntax/src/expressions.rs
expression: parse(input)
---
Binary:
  lhs:
    Primitive:
      Int: 1
  rhs:
    Primitive:
      Int: 2
  op: Plus
