aml-syntax/src/snapshots/aml_syntax__expressions__test__brackets.snap
---
source: aml-syntax/src/expressions.rs
expression: parse(input)
---
Binary:
  lhs:
    Binary:
      lhs:
        Primitive:
          Int: 5
      rhs:
        Primitive:
          Int: 1
      op: Plus
  rhs:
    Primitive:
      Int: 2
  op: Mul
