aml-syntax/src/snapshots/aml_syntax__expressions__test__double_operators.snap
---
source: aml-syntax/src/expressions.rs
expression: parse(input)
---
Binary:
  original: 1 + +
  lhs:
    Primitive:
      original: "1"
      value:
        Int: 1
      location:
        start_byte: 0
        end_byte: 1
  rhs:
    Error:
      original: +
      location:
        start_byte: 4
        end_byte: 5
      token:
        Operator: Plus
  op: Plus
  location:
    start_byte: 0
    end_byte: 5
