aml-syntax/src/snapshots/aml_syntax__expressions__test__empty_map_entry.snap
---
source: aml-syntax/src/expressions.rs
expression: parse(input)
---
Map:
  original: "{:"
  items:
    - - Error:
          original: ":"
          location:
            start_byte: 1
            end_byte: 2
          token:
            Operator: Colon
      - Error:
          original: ":"
          location:
            start_byte: 1
            end_byte: 2
          token:
            Operator: Colon
  location:
    start_byte: 0
    end_byte: 2
